# TSFM

./: .gitignore  demo.ipynb  pyproject.toml  train.py
results/test/: metrics_baseline_full_1000.json  metrics_baseline_head_1000.json  metrics_mantis_probe_head_1000.json  metrics_mantisv2_full_20.json  metrics_mantisv2_full_30.json  metrics_mantisv2_full_50.json  metrics_mantisv2_head_1000.json  metrics_mantisv2_head_2000.json  metrics_mantisv2_head_3000.json  metrics_mantisv2_head_500.json  metrics_moment_full_30.json  metrics_moment_head_10.json
results/train/: metrics_baseline_head_1000.json  metrics_mantis_probe_head_1000.json  metrics_mantisv2_full_20.json  metrics_mantisv2_full_30.json  metrics_mantisv2_full_50.json  metrics_mantisv2_head_1000.json  metrics_mantisv2_head_2000.json  metrics_mantisv2_head_3000.json  metrics_mantisv2_head_500.json  metrics_moment_full_30.json  metrics_moment_head_10.json
src/configs/: baseline_config.yaml  mantis_config.yaml  mantis_probe_config.yaml  moment_config.yaml
src/configs/model/: baseline.yaml  moment.yaml
src/configs/train_wrapper/: baseline_trainer.yaml  mantis_probe_trainer.yaml  mantis_trainer.yaml  moment_trainer.yaml
src/model/: __init__.py  baseline.py  moment.py
src/processing/: __init__.py  processor.py
src/trainer/: __init__.py  baseline.py  mantis_probe.py  moment_trainer.py
